--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -6,13 +6,22 @@ on:
 
 jobs:
   automerge:
+    runs-on: ubuntu-latest
     name: automerge
     if: |
       github.actor == 'dependabot[bot]' &&
       github.event_name == 'pull_request' &&
       startsWith(github.event.pull_request.title, 'Bump Corvus.')
     steps:
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
       - name: Approve pull request
+        env: 
+          GH_TOKEN: ${{ steps.generate_token.outputs.token }}
         if: github.actor == 'dependabot[bot]'
         uses: andrewmusgrave/automatic-pull-request-review@0.0.2
         with:
@@ -20,6 +29,8 @@ jobs:
           event: APPROVE
           body: 'Thank you dependabot 🎊'
       - name: '@dependabot merge'
+        env: 
+          GH_TOKEN: ${{ steps.generate_token.outputs.token }}
         uses: actions/github-script@v2
         with:
           github-token: ${{secrets.GH_TOKEN}}
