--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -20,12 +20,10 @@ jobs:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.PRIVATE_KEY }}
       - name: Approve pull request
-        env: 
-          GH_TOKEN: ${{ steps.generate_token.outputs.token }}
         if: github.actor == 'dependabot[bot]'
         uses: andrewmusgrave/automatic-pull-request-review@0.0.2
         with:
-          repo-token: '${{ secrets.GH_TOKEN }}'
+          repo-token: '${{ steps.generate_token.outputs.token }}'
           event: APPROVE
           body: 'Thank you dependabot 🎊'
       - name: '@dependabot merge'
@@ -33,7 +31,7 @@ jobs:
           GH_TOKEN: ${{ steps.generate_token.outputs.token }}
         uses: actions/github-script@v2
         with:
-          github-token: ${{secrets.GH_TOKEN}}
+          github-token: '${{ steps.generate_token.outputs.token }}'
           script: |
             await github.issues.createComment({
               owner: context.payload.repository.owner.login,
