--- a/Solutions/dependency-playground.csproj
+++ b/Solutions/dependency-playground.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Corvus.Extensions" Version="0.9.0" />
+    <PackageReference Include="Corvus.Extensions.Newtonsoft.Json" Version="0.9.0" />
     <PackageReference Include="Corvus.Retry" Version="0.5.0" />
   </ItemGroup>
 
