--- a/.github/workflows/autolabel.yml
+++ b/.github/workflows/autolabel.yml
@@ -5,9 +5,9 @@ on:
     
 
 jobs:
-  automerge:
+  autolabel:
     runs-on: ubuntu-latest
-    name: automerge
+    name: autolabel
     if: |
       github.actor == 'dependabot[bot]' &&
       github.event_name == 'pull_request' &&
@@ -30,5 +30,6 @@ jobs:
               owner: context.payload.repository.owner.login,
               repo: context.payload.repository.name,
               issue_number: context.payload.pull_request.number,
-              labels: 'autosquash'
+              labels: 
+              - 'autosquash'
             })
