--- a/Solutions/dependency-playground.csproj
+++ b/Solutions/dependency-playground.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Corvus.Extensions" Version="1.0.0" />
     <PackageReference Include="Corvus.Extensions.Newtonsoft.Json" Version="0.9.0" />
     <PackageReference Include="Corvus.Retry" Version="0.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
 </Project>
