--- a/Solutions/dependency-playground.csproj
+++ b/Solutions/dependency-playground.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Corvus.Monitoring.Instrumentation.Abstractions" Version="0.2.0" />
     <PackageReference Include="Corvus.Retry" Version="0.5.0" />
     <PackageReference Include="Corvus.Testing.SpecFlow" Version="1.0.0" />
+    <PackageReference Include="Marain.Claims.Abstractions" Version="0.1.0" />
     <PackageReference Include="Marain.Claims.Client" Version="0.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
