--- a/Solutions/dependency-playground.csproj
+++ b/Solutions/dependency-playground.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Corvus.Testing.SpecFlow" Version="1.0.0" />
     <PackageReference Include="Marain.Claims.Abstractions" Version="0.1.0" />
     <PackageReference Include="Marain.Claims.Client" Version="0.1.0" />
+    <PackageReference Include="Marain.Claims.OpenApi.Service" Version="0.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
