--- a/Solutions/dependency-playground.csproj
+++ b/Solutions/dependency-playground.csproj
@@ -7,19 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Corvus.Configuration" Version="0.5.0" />
-    <PackageReference Include="Corvus.ContentHandling" Version="0.16.0" />
-    <PackageReference Include="Corvus.Extensions" Version="1.0.0" />
-    <PackageReference Include="Corvus.Extensions.Newtonsoft.Json" Version="0.9.0" />
-    <PackageReference Include="Corvus.Monitoring.Instrumentation.Abstractions" Version="0.2.0" />
-    <PackageReference Include="Corvus.Retry" Version="0.5.0" />
-    <PackageReference Include="Corvus.Testing.SpecFlow" Version="1.0.0" />
-    <PackageReference Include="Marain.Claims.Abstractions" Version="0.1.0" />
-    <PackageReference Include="Marain.Claims.Client" Version="0.1.0" />
-    <PackageReference Include="Marain.Claims.Hosting.AspNetCore" Version="0.1.0" />
-    <PackageReference Include="Marain.Claims.OpenApi.AspNetCore" Version="0.1.0" />
-    <PackageReference Include="Marain.Claims.OpenApi.Service" Version="0.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Marain.Claims.Client.OpenApi" Version="0.4.0" />
   </ItemGroup>
 
 </Project>
