--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
 - package-ecosystem: nuget
-  directory: "/Solutions"
+  directory: "/Solutions/dependency-playground"
   schedule:
     interval: daily
   open-pull-requests-limit: 10
