--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -10,6 +10,7 @@ jobs:
     name: Parse Dependabot PR title
     outputs:
       dependency_name: ${{ steps.parse_dependabot_pr.outputs.dependency_name }}
+      is_auto_merge_candidate: ${{ steps.parse_dependabot_pr.outputs.is_matching_package }}
       update_type: ${{ steps.parse_dependabot_pr.outputs.update_type }}
     if: |
       github.actor == 'dependabot[bot]' &&
@@ -18,9 +19,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Parse Dependabot PR title
         id: parse_dependabot_pr
-        uses: ./.github/actions/parse_dependabot_pr
+        uses: endjin/dependabot-pr-parser
         with:
           pr_title: ${{ github.event.pull_request.title }}
+          package_filter_as_json_array: |
+            ["Endjin","Corvus","Menes","Marain","dependency-playground"]
   approve_and_label:
     runs-on: ubuntu-latest
     needs: parse_dependabot_pr
@@ -28,11 +31,7 @@ jobs:
     if: |
         github.actor == 'dependabot[bot]' &&
         github.event_name == 'pull_request' &&
-        (startsWith(needs.parse_dependabot_pr.outputs.dependency_name, 'Endjin') ||
-        startsWith(needs.parse_dependabot_pr.outputs.dependency_name, 'Corvus') ||
-        startsWith(needs.parse_dependabot_pr.outputs.dependency_name, 'Menes') ||
-        startsWith(needs.parse_dependabot_pr.outputs.dependency_name, 'Marain') ||
-        startsWith(needs.parse_dependabot_pr.outputs.dependency_name, 'dependency-playground')) &&
+        needs.parse_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
         (needs.parse_dependabot_pr.outputs.update_type == 'minor' || needs.parse_dependabot_pr.outputs.update_type == 'patch')
     steps:
       - name: Generate token
