--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Parse Dependabot PR title
         id: parse_dependabot_pr
-        uses: endjin/dependabot-pr-parser
+        uses: endjin/dependabot-pr-parser@v1
         with:
           pr_title: ${{ github.event.pull_request.title }}
           package_filter_as_json_array: |
