--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -5,7 +5,7 @@ on:
     
 
 jobs:
-  parse_dependabot_pr:
+  evaluate_dependabot_pr:
     runs-on: ubuntu-latest
     name: Parse Dependabot PR title
     outputs:
@@ -26,13 +26,13 @@ jobs:
             ["Endjin.*","Corvus.*","Menes.*","Marain.*","dependency-playground*"]
   approve_and_label:
     runs-on: ubuntu-latest
-    needs: parse_dependabot_pr
+    needs: evaluate_dependabot_pr
     name: Approve and label
     if: |
         github.actor == 'dependabot[bot]' &&
         github.event_name == 'pull_request' &&
-        needs.parse_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
-        (needs.parse_dependabot_pr.outputs.update_type == 'minor' || needs.parse_dependabot_pr.outputs.update_type == 'patch')
+        needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
+        (needs.evaluate_dependabot_pr.outputs.update_type == 'minor' || needs.evaluate_dependabot_pr.outputs.update_type == 'patch')
     steps:
       - name: Generate token
         id: generate_token
