--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -30,10 +30,10 @@ jobs:
     name: Approve and label
     if: |
         github.actor == 'dependabot[bot]' &&
-        github.event_name == 'pull_request' &&
-        needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
-        (needs.evaluate_dependabot_pr.outputs.update_type == 'minor' || needs.evaluate_dependabot_pr.outputs.update_type == 'patch')
+      github.event_name == 'pull_request'
     steps:
+      - name: debug
+        uses: hmarr/debug-action
       - name: Generate token
         id: generate_token
         uses: tibdex/github-app-token@v1
@@ -41,12 +41,18 @@ jobs:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.PRIVATE_KEY }}
       - name: Approve pull request
+        if: |
+          needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
+          (needs.evaluate_dependabot_pr.outputs.update_type == 'minor' || needs.evaluate_dependabot_pr.outputs.update_type == 'patch')
         uses: andrewmusgrave/automatic-pull-request-review@0.0.2
         with:
           repo-token: '${{ steps.generate_token.outputs.token }}'
           event: APPROVE
           body: 'Thank you dependabot 🎊'
       - name: 'Label with "autosquash"'
+        if: |
+          needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
+          (needs.evaluate_dependabot_pr.outputs.update_type == 'minor' || needs.evaluate_dependabot_pr.outputs.update_type == 'patch')
         env: 
           GH_TOKEN: ${{ steps.generate_token.outputs.token }}
         uses: actions/github-script@v2
