More updates to aid debugging

--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -13,7 +13,7 @@ jobs:
       is_auto_merge_candidate: ${{ steps.parse_dependabot_pr.outputs.is_interesting_package }}
       update_type: ${{ steps.parse_dependabot_pr.outputs.update_type }}
     if: |
-      github.actor == 'dependabot[bot]' &&
+      (github.actor == 'dependabot[bot]' || github.actor == "nektos/act") &&
       github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v2
@@ -29,7 +29,7 @@ jobs:
     needs: evaluate_dependabot_pr
     name: Approve and label
     if: |
-        github.actor == 'dependabot[bot]' &&
+      (github.actor == 'dependabot[bot]' || github.actor == "nektos/act") &&
       github.event_name == 'pull_request'
     steps:
       - name: debug
