--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -33,7 +33,10 @@ jobs:
       github.event_name == 'pull_request'
     steps:
       - name: debug
-        uses: hmarr/debug-action
+        run: |
+          env
+          cat "$GITHUB_EVENT_PATH"
+        shell: bash
       - name: Generate token
         id: generate_token
         uses: tibdex/github-app-token@v1
