--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -24,6 +24,11 @@ jobs:
           pr_title: ${{ github.event.pull_request.title }}
           package_filter_as_json_array: |
             ["Endjin.*","Corvus.*","Menes.*","Marain.*","dependency-playground*"]
+      - name: debug
+        run: |
+          echo "dependency_name : ${{ steps.parse_dependabot_pr.outputs.dependency_name }}"
+          echo "is_interesting_package : ${{ steps.parse_dependabot_pr.outputs.is_interesting_package }}"
+          echo "update_type : ${{ steps.parse_dependabot_pr.outputs.update_type }}"
   approve_and_label:
     runs-on: ubuntu-latest
     needs: evaluate_dependabot_pr
@@ -36,6 +41,11 @@ jobs:
         run: |
           env
           cat "$GITHUB_EVENT_PATH"
+          echo "<------------------------------------------------>"
+          echo "dependency_name : ${{needs.evaluate_dependabot_pr.outputs.dependency_name}}"
+          echo "update_type     : ${{needs.evaluate_dependabot_pr.outputs.update_type}}"
+          echo "auto_merge      : ${{needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate}}"
+          echo "<------------------------------------------------>"
         shell: bash
       - name: Generate token
         id: generate_token
