Move the package filter config to be more visible

--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -3,6 +3,10 @@ on:
   pull_request:
     types: [opened, reopened]
     
+env:
+  # Customise this variable to choose which dependencies can be auto-merged
+  AUTO_MERGE_PACKAGE_FILTER: |
+    ["Endjin.*","Corvus.*","Menes.*","Marain.*"]
 
 jobs:
   evaluate_dependabot_pr:
@@ -22,8 +26,7 @@ jobs:
         uses: endjin/dependabot-pr-parser@v1
         with:
           pr_title: ${{ github.event.pull_request.title }}
-          package_filter_as_json_array: |
-            ["Endjin.*","Corvus.*","Menes.*","Marain.*","dependency-playground*"]
+          package_filter_as_json_array: ${{ env.AUTO_MERGE_PACKAGE_FILTER }}
       - name: debug
         run: |
           echo "dependency_name : ${{ steps.parse_dependabot_pr.outputs.dependency_name }}"
