Revert package filter after workflow testing

--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -6,7 +6,7 @@ on:
 env:
   # Customise this variable to choose which dependencies can be auto-merged
   AUTO_MERGE_PACKAGE_FILTER: |
-    ["Endjin.*","Corvus.*","Menes.*","Marain.*"]
+    ["Endjin.*","Corvus.*","Menes.*","Marain.*","dependency-playground*"]
 
 jobs:
   evaluate_dependabot_pr:
