Updated workflow to reflect parameter change on 'dependabot-pr-parser'

--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -23,10 +23,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Parse Dependabot PR title
         id: parse_dependabot_pr
-        uses: endjin/dependabot-pr-parser@v1
+        uses: endjin/dependabot-pr-parser@v2
         with:
           pr_title: ${{ github.event.pull_request.title }}
-          package_filter_as_json_array: ${{ env.AUTO_MERGE_PACKAGE_FILTER }}
+          package_filter: ${{ env.AUTO_MERGE_PACKAGE_FILTER }}
       - name: debug
         run: |
           echo "dependency_name : ${{ steps.parse_dependabot_pr.outputs.dependency_name }}"
