--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -50,30 +50,22 @@ jobs:
           echo "auto_merge      : ${{needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate}}"
           echo "<------------------------------------------------>"
         shell: bash
-      - name: Generate token
-        id: generate_token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.PRIVATE_KEY }}
       - name: Approve pull request
         if: |
           needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
           (needs.evaluate_dependabot_pr.outputs.update_type == 'minor' || needs.evaluate_dependabot_pr.outputs.update_type == 'patch')
         uses: andrewmusgrave/automatic-pull-request-review@0.0.2
         with:
-          repo-token: '${{ steps.generate_token.outputs.token }}'
+          repo-token: '${{ secrets.GITHUB_TOKEN }}'
           event: APPROVE
           body: 'Thank you dependabot 🎊'
       - name: 'Label with "autosquash"'
         if: |
           needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
           (needs.evaluate_dependabot_pr.outputs.update_type == 'minor' || needs.evaluate_dependabot_pr.outputs.update_type == 'patch')
-        env: 
-          GH_TOKEN: ${{ steps.generate_token.outputs.token }}
         uses: actions/github-script@v2
         with:
-          github-token: '${{ steps.generate_token.outputs.token }}'
+          github-token: '${{ secrets.GITHUB_TOKEN }}'
           script: |
             await github.issues.addLabels({
               owner: context.payload.repository.owner.login,
