--- a/.github/workflows/autosquash.yml
+++ b/.github/workflows/autosquash.yml
@@ -27,6 +27,12 @@ jobs:
     name: Autosquash
     runs-on: ubuntu-18.04
     steps:
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
       - uses: tibdex/autosquash@v2
         with:
-          github_token: '${{ secrets.GITHUB_TOKEN }}'
+          github_token: '${{ steps.generate_token.outputs.token }}'
