--- a/.github/workflows/gitversion-test.yml
+++ b/.github/workflows/gitversion-test.yml
@@ -27,12 +27,20 @@ jobs:
         echo "Minor: ${{ steps.gitversion.outputs.minor }}"
         echo "Patch: ${{ steps.gitversion.outputs.patch }}"
         echo "SemVer: ${{ steps.gitversion.outputs.semver }}"
-      name: Output
+      name: gitversion-output
 
     - name: Bump version and push tag
+      id: tag
       uses: mathieudutour/github-tag-action@v4.5
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         default_bump: false
         tag_prefix: v
         dry_run: true
+
+    - run: |
+        echo "new_tag: ${{ steps.tag.outputs.new_tag }}"
+        echo "new_version : ${{ steps.tag.outputs.new_version  }}"
+        echo "previous_tag : ${{ steps.tag.outputs.previous_tag  }}"
+        echo "changelog : ${{ steps.tag.outputs.changelog  }}"
+      name: tag-output
