--- a/Solutions/dependency-playground/dependency-playground.csproj
+++ b/Solutions/dependency-playground/dependency-playground.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="dependency-playground-lib" Version="1.0.23" />
+    <PackageReference Include="Marain.Claims.Client" Version="0.5.0" />
+    <PackageReference Include="Marain.Claims.OpenApi" Version="0.5.0" />
   </ItemGroup>
 
 </Project>
