--- a/Solutions/dependency-playground/dependency-playground.csproj
+++ b/Solutions/dependency-playground/dependency-playground.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="dependency-playground-lib" Version="1.0.25" />
+    <PackageReference Include="dependency-playground-lib-2" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
