--- a/.github/workflows/autosquash.yml
+++ b/.github/workflows/autosquash.yml
@@ -13,6 +13,7 @@ on:
       # Adding the autosquash label to a pull request can
       # trigger an update or a merge.
       - labeled
+      - synchronize
   pull_request_review:
     types:
       # Review approvals can unblock the pull request and
