--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
     types: [closed]
 
+env:
+  # Customise this variable to choose which dependencies can be auto-merged
+  AUTO_MERGE_PACKAGE_FILTER: |
+    ["Endjin.*","Corvus.*","Menes.*","Marain.*","dependency-playground*"]
+
 jobs:
   check_for_open_prs:
     runs-on: ubuntu-latest
@@ -35,8 +40,7 @@ jobs:
       uses: endjin/dependabot-pr-parser/src/dependabot-pr-watcher@5f47a2ef721bbf9b80aa49e5ad39ad56284f2181
       with:
         pr_titles: ${{ steps.get_pr_list.outputs.result }}
-        package_wildcard_expressions: |
-          ["Endjin.*","Corvus.*"]
+        package_wildcard_expressions: ${{ env.AUTO_MERGE_PACKAGE_FILTER }}
         max_semver_increment: minor
         verbose_mode: 'False'
 
