--- a/.github/workflows/autosquash.yml
+++ b/.github/workflows/autosquash.yml
@@ -34,6 +34,6 @@ jobs:
         with:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.PRIVATE_KEY }}
-      - uses: tibdex/autosquash@v2
+      - uses: endjin/autosquash@master
         with:
           github_token: '${{ steps.generate_token.outputs.token }}'
