--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -47,7 +47,8 @@ jobs:
   tag_for_release:
     runs-on: ubuntu-latest
     needs: check_for_open_prs
-    if: needs.check_for_open_prs.outputs.no_open_prs === 'True'
+    if: |
+      (needs.check_for_open_prs.outputs.no_open_prs == 'True')
     steps:
     - uses: actions/setup-dotnet@v1
       with:
