--- a/.github/workflows/autosquash.yml
+++ b/.github/workflows/autosquash.yml
@@ -32,8 +32,8 @@ jobs:
         id: generate_token
         uses: tibdex/github-app-token@v1
         with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.PRIVATE_KEY }}
+          app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
+          private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
       - uses: endjin/autosquash@v2.2
         with:
           github_token: '${{ steps.generate_token.outputs.token }}'
