--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -9,8 +9,35 @@ env:
     ["Endjin.*","Corvus.*","Menes.*","Marain.*","dependency-playground*"]
 
 jobs:
+  check_for_norelease_label:
+    runs-on: ubuntu-latest
+    outputs:
+      no_release: ${{ steps.check_for_norelease_label.outputs.exists }}
+    steps:
+    - id: check_for_norelease_label
+      uses: actions/github-script@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          try {
+            const label = await github.issues.listLabelsOnIssue({
+              owner: context.payload.repository.owner.login,
+              repo: context.payload.repository.name,
+              issue_number: context.payload.number
+            });
+            return true
+          }
+          catch (error){
+            if (error.status == 404) {
+              return false
+            }
+            throw error
+          }
+
   check_for_open_prs:
     runs-on: ubuntu-latest
+    if: |
+      !needs.check_for_norelease_label.outputs.no_release
     outputs:
       no_open_prs: ${{ steps.watch_dependabot_prs.outputs.is_complete }}
     steps:
