Debugging issue with 'no_release' logic

--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -15,6 +15,7 @@ jobs:
       no_release: ${{ steps.check_for_norelease_label.outputs.result }}
     steps:
     - id: check_for_norelease_label
+      name: Check for 'no_release' label on PR
       uses: actions/github-script@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -26,9 +27,13 @@ jobs:
             });
             core.info("labels: " + JSON.stringify(labels.data))
             if ( labels.data.map(l => l.name).includes("no_release") ) {
+              core.info("Label found")
               return true
             }
             return false
+    - name: Display 'no_release' status
+      run: |
+        echo "no_release: ${{ steps.check_for_norelease_label.outputs.result }}"
 
   check_for_open_prs:
     runs-on: ubuntu-latest
