Enable manual triggering for testing purposes

--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -2,6 +2,7 @@ name: auto_release
 on: 
   pull_request:
     types: [closed]
+  workflow_dispatch:
 
 env:
   # Customise this variable to choose which dependencies can be auto-merged
@@ -39,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: check_for_norelease_label
     if: |
-      !needs.check_for_norelease_label.outputs.no_release
+      needs.check_for_norelease_label.outputs.no_release == false
     outputs:
       no_open_prs: ${{ steps.watch_dependabot_prs.outputs.is_complete }}
     steps:
