--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -7,6 +7,8 @@ env:
   # Customise this variable to choose which dependencies can be auto-merged
   AUTO_MERGE_PACKAGE_WILDCARD_EXPRESSIONS: |
     ["Endjin.*","Corvus.*","Menes.*","Marain.*","dependency-playground*"]
+  AUTO_RELEASE_PACKAGE_WILDCARD_EXPRESSIONS: |
+    ["dependency-playground-lib-2"]
 
 jobs:
   evaluate_dependabot_pr:
@@ -16,23 +18,31 @@ jobs:
       dependency_name: ${{ steps.parse_dependabot_pr.outputs.dependency_name }}
       version_from: ${{ steps.parse_dependabot_pr.outputs.version_from }}
       version_to: ${{ steps.parse_dependabot_pr.outputs.version_to }}
-      is_auto_merge_candidate: ${{ steps.parse_dependabot_pr.outputs.is_interesting_package }}
+      is_auto_merge_candidate: ${{ steps.parse_dependabot_pr_automerge.outputs.is_interesting_package }}
+      is_auto_release_candidate: ${{ steps.parse_dependabot_pr_autorelease.outputs.is_interesting_package }}
       semver_increment: ${{ steps.parse_dependabot_pr.outputs.semver_increment }}
     if: |
       (github.actor == 'dependabot[bot]' || github.actor == 'nektos/act') &&
       github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v2
-      - name: Parse Dependabot PR title
-        id: parse_dependabot_pr
+      - name: Dependabot PR - AutoMerge Candidate
+        id: parse_dependabot_pr_automerge
         uses: endjin/pr-autoflow/actions/dependabot-pr-parser@v1
         with:
           pr_title: ${{ github.event.pull_request.title }}
           package_wildcard_expressions: ${{ env.AUTO_MERGE_PACKAGE_WILDCARD_EXPRESSIONS }}
+      - name: Dependabot PR - AutoRelease Candidate
+        id: parse_dependabot_pr_autorelease
+        uses: endjin/pr-autoflow/actions/dependabot-pr-parser@v1
+        with:
+          pr_title: ${{ github.event.pull_request.title }}
+          package_wildcard_expressions: ${{ env.AUTO_RELEASE_PACKAGE_WILDCARD_EXPRESSIONS }}
       - name: debug
         run: |
           echo "dependency_name : ${{ steps.parse_dependabot_pr.outputs.dependency_name }}"
-          echo "is_interesting_package : ${{ steps.parse_dependabot_pr.outputs.is_interesting_package }}"
+          echo "is_interesting_package (merge) : ${{ steps.parse_dependabot_pr_automerge.outputs.is_interesting_package }}"
+          echo "is_interesting_package (release) : ${{ steps.parse_dependabot_pr_autorelease.outputs.is_interesting_package }}"
           echo "semver_increment : ${{ steps.parse_dependabot_pr.outputs.semver_increment }}"
   approve_and_label:
     runs-on: ubuntu-latest
@@ -48,6 +58,7 @@ jobs:
           echo "dependency_name : ${{needs.evaluate_dependabot_pr.outputs.dependency_name}}"
           echo "semver_increment     : ${{needs.evaluate_dependabot_pr.outputs.semver_increment}}"
           echo "auto_merge      : ${{needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate}}"
+          echo "auto_release    : ${{needs.evaluate_dependabot_pr.outputs.is_auto_release_candidate}}"
           echo "from_version    : ${{needs.evaluate_dependabot_pr.outputs.version_from}}"
           echo "to_version      : ${{needs.evaluate_dependabot_pr.outputs.version_to}}"
           echo "<------------------------------------------------>"
@@ -98,4 +109,17 @@ jobs:
               repo: context.payload.repository.name,
               issue_number: context.payload.pull_request.number,
               labels: ['autosquash']
+            })
+      - name: 'Label with "pending_release"'
+        if: |
+          needs.evaluate_dependabot_pr.outputs.is_auto_release_candidate == 'True'
+        uses: actions/github-script@v2
+        with:
+          github-token: '${{ secrets.GITHUB_TOKEN }}'
+          script: |
+            await github.issues.addLabels({
+              owner: context.payload.repository.owner.login,
+              repo: context.payload.repository.name,
+              issue_number: context.payload.pull_request.number,
+              labels: ['pending_release']
             })
