--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -43,9 +43,11 @@ jobs:
       needs.check_for_norelease_label.outputs.no_release == 'false'
     outputs:
       no_open_prs: ${{ steps.watch_dependabot_prs.outputs.is_complete }}
+      pending_release_pr_list: ${{ steps.get_release_pending_pr_list.outputs.result }}
+      ready_to_release: ${{ steps.watch_dependabot_prs.outputs.is_complete == 'True' && steps.get_release_pending_pr_list.outputs.result.length > 0 }}
     steps:
-    - id: get_pr_list
-      name: Get PRs
+    - id: get_open_pr_list
+      name: Get Open PRs
       uses: actions/github-script@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -58,16 +60,32 @@ jobs:
           });
           return JSON.stringify(pulls.data.map(p=>p.title))
         result-encoding: string
-
-    - name: Display pr_list
+    - name: Display open_pr_list
       run: |
-        echo "pr_list : ${{ steps.get_pr_list.outputs.result }}"
+        echo "open_pr_list : ${{ steps.get_open_pr_list.outputs.result }}"
+
+    - id: get_release_pending_pr_list
+      uses: actions/github-script@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const pulls = await github.search.issuesAndPullRequests({
+            q: 'is:pr is:merged label:pending_release',
+          });
+          const repoUrl = `https://api.github.com/repos/${context.payload.repository.owner.login}/${context.payload.repository.name}`
+          const release_pending_prs = pulls.data.items.
+                                        filter(function (x) { return x.repository_url == repoUrl; }).
+                                        map(p=>p.title);
+          return JSON.stringify(release_pending_prs)
+    - name: Display release_pending_pr_list
+      run: |
+        echo "release_pending_pr_list : ${{ steps.get_release_pending_pr_list.outputs.result }}"
 
     - id: watch_dependabot_prs
       name: Watch Dependabot PRs
       uses: endjin/pr-autoflow/actions/dependabot-pr-watcher@v1
       with:
-        pr_titles: ${{ steps.get_pr_list.outputs.result }}
+        pr_titles: ${{ steps.get_open_pr_list.outputs.result }}
         package_wildcard_expressions: ${{ env.AUTO_MERGE_PACKAGE_WILDCARD_EXPRESSIONS }}
         max_semver_increment: minor
         verbose_mode: 'False'
@@ -76,7 +94,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: check_for_open_prs
     if: |
-      (needs.check_for_open_prs.outputs.no_open_prs == 'True')
+      (needs.check_for_open_prs.outputs.ready_to_release == true)
     steps:
     - uses: actions/setup-dotnet@v1
       with:
@@ -102,8 +120,30 @@ jobs:
         app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
         private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
 
+    - name: Display release_pending_pr_list
+      run: |
+        echo "release_pending_pr_list : ${{ needs.check_for_open_prs.outputs.pending_release_pr_list }}"
+
     # create the SemVer tag
     - uses: hole19/git-tag-action@master
       env:
         TAG: ${{ steps.run_gitversion.outputs.semver }}
         GITHUB_TOKEN: '${{ steps.generate_token.outputs.token }}'
+
+    # remove the 'release_pending' labels
+    - id: remove_pending_release_labels
+      uses: actions/github-script@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          core.info('input: ${{ needs.check_for_open_prs.outputs.pending_release_pr_list }}')
+          const pr_list = JSON.parse('${{ needs.check_for_open_prs.outputs.pending_release_pr_list }}')
+          pr_list.forEach(function (i) {
+            core.info(`Removing label 'release_pending' from issue ${i}`)
+            await github.issues.removeLabel({
+              owner: context.payload.repository.owner.login,
+              repo: context.payload.repository.name,
+              issue_number: i,
+              labels: ['pending_release']
+            })
+          });
