--- a/.github/workflows/approve_and_label.yml
+++ b/.github/workflows/approve_and_label.yml
@@ -40,10 +40,10 @@ jobs:
           package_wildcard_expressions: ${{ env.AUTO_RELEASE_PACKAGE_WILDCARD_EXPRESSIONS }}
       - name: debug
         run: |
-          echo "dependency_name : ${{ steps.parse_dependabot_pr.outputs.dependency_name }}"
+          echo "dependency_name : ${{ steps.parse_dependabot_pr_automerge.outputs.dependency_name }}"
           echo "is_interesting_package (merge) : ${{ steps.parse_dependabot_pr_automerge.outputs.is_interesting_package }}"
           echo "is_interesting_package (release) : ${{ steps.parse_dependabot_pr_autorelease.outputs.is_interesting_package }}"
-          echo "semver_increment : ${{ steps.parse_dependabot_pr.outputs.semver_increment }}"
+          echo "semver_increment : ${{ steps.parse_dependabot_pr_automerge.outputs.semver_increment }}"
   approve_and_label:
     runs-on: ubuntu-latest
     needs: evaluate_dependabot_pr
