--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -44,7 +44,7 @@ jobs:
     outputs:
       no_open_prs: ${{ steps.watch_dependabot_prs.outputs.is_complete }}
       pending_release_pr_list: ${{ steps.get_release_pending_pr_list.outputs.result }}
-      ready_to_release: ${{ steps.watch_dependabot_prs.outputs.is_complete == 'True' && steps.get_release_pending_pr_list.outputs.result.length > 0 }}
+      ready_to_release: ${{ steps.watch_dependabot_prs.outputs.is_complete == 'True' && steps.get_release_pending_pr_list.outputs.is_release_pending }}
     steps:
     - id: get_open_pr_list
       name: Get Open PRs
@@ -76,10 +76,12 @@ jobs:
           const release_pending_prs = pulls.data.items.
                                         filter(function (x) { return x.repository_url == repoUrl; }).
                                         map(p=>p.title);
+          core.setOutput('is_release_pending', (release_pending_prs.length > 0))
           return JSON.stringify(release_pending_prs)
     - name: Display release_pending_pr_list
       run: |
         echo "release_pending_pr_list : ${{ steps.get_release_pending_pr_list.outputs.result }}"
+        echo "is_release_pending : ${{ steps.get_release_pending_pr_list.outputs.is_release_pending }}"
 
     - id: watch_dependabot_prs
       name: Watch Dependabot PRs
@@ -93,8 +95,8 @@ jobs:
     - name: Display job outputs
       run: |
         echo "no_open_prs: ${{ steps.watch_dependabot_prs.outputs.is_complete }}"
-        echo "${{ steps.get_release_pending_pr_list.outputs.result }}"
-        echo "ready_to_release: ${{ steps.watch_dependabot_prs.outputs.is_complete == 'True' && steps.get_release_pending_pr_list.outputs.result.length > 0 }}"
+        echo "pending_release_pr_list: ${{ steps.get_release_pending_pr_list.outputs.result }}"
+        echo "ready_to_release : ${{ steps.watch_dependabot_prs.outputs.is_complete == 'True' && steps.get_release_pending_pr_list.outputs.is_release_pending }}"
   tag_for_release:
     runs-on: ubuntu-latest
     needs: check_for_open_prs
