--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -101,7 +101,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: check_for_open_prs
     if: |
-      (needs.check_for_open_prs.outputs.ready_to_release == true)
+      needs.check_for_open_prs.outputs.ready_to_release == 'true'
     steps:
     - uses: actions/setup-dotnet@v1
       with:
